# ruby

./: .editorconfig  .gitattributes  .gitignore  .tsqueryrc.json  CHANGELOG.md  CHANGELOG.md.old  Cargo.toml  LICENSE-APACHE  README.md  commitlint.config.js  extension.toml  package.json  pnpm-lock.yaml  renovate.json  snippets.json
.context/compound-engineering/ce-code-review/20260419-231842-d1c7183d/: api-contract.json  correctness.json  maintainability.json  metadata.json  project-standards.json  reliability.json  testing.json
.github/workflows/: bump_version.yml  ci.yml
debug_adapter_schemas/: rdbg.json
languages/empirical/: config.toml  highlights.scm  outline.scm
languages/erb/: config.toml  injections.scm
languages/html-erb/: config.toml  injections.scm
languages/js-erb/: config.toml  injections.scm
languages/rbs/: config.toml  highlights.scm  indents.scm
languages/ruby/: brackets.scm  config.toml  debugger.scm  embedding.scm  highlights.scm  indents.scm  injections.scm  outline.scm  ruby.json  runnables.scm  tasks.json  textobjects.scm
languages/yaml-erb/: config.toml  injections.scm
src/: bundler.rs  command_executor.rs  environment.rs  gemset.rs  language_servers.rs  ruby.rs
src/language_servers/: fuzzy_ruby_server.rs  herb.rs  kanayago.rs  language_server.rs  mod.rs  rubocop.rs  ruby_lsp.rs  solargraph.rs  sorbet.rs  standard.rs  standardrb.rs  steep.rs
tests/: erb.rs  ruby.rs
tests/languages/erb/: injections.erb
tests/languages/erb/snapshots/: injections.snap
tests/languages/ruby/: debugger.rb  injections.rb  outline.rb  runnables.rb  textobjects.rb
tests/languages/ruby/snapshots/: debugger.snap  injections.snap  outline.snap  runnables.snap  textobjects.snap
tests/support/: mod.rs
