[package]
name = "zed_ruby"
version = "0.16.5"
edition = "2021"
publish = false
license = "Apache-2.0"

[lib]
path = "src/ruby.rs"
crate-type = ["cdylib"]

[dependencies]
regex = "1.11.1"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
zed_extension_api = "0.7.0"

[dev-dependencies]
tree-sitter = "0.25"
tree-sitter-ruby = { git = "https://github.com/tree-sitter/tree-sitter-ruby.git", rev = "71bd32fb7607035768799732addba884a37a6210" }
tree-sitter-embedded-template = { git = "https://github.com/tree-sitter/tree-sitter-embedded-template.git", rev = "3499d85f0a0d937c507a4a65368f2f63772786e1" }
insta = { version = "1.46", features = ["yaml"] }
