[package]
name = "zed_ruby"
version = "0.16.5"
edition = "2021"
publish = false
license = "Apache-2.0"

[lib]
path = "src/ruby.rs"
crate-type = ["cdylib"]

[dependencies]
regex = "1.11.1"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
zed_extension_api = "0.7.0"

[dev-dependencies]
tree-sitter = "0.25"
tree-sitter-ruby = { git = "https://github.com/tree-sitter/tree-sitter-ruby.git", rev = "ab6dca77a8184abc94af6e3e82538741b5078d63" }
tree-sitter-embedded-template = { git = "https://github.com/tree-sitter/tree-sitter-embedded-template.git", rev = "c70c1de07dedd532089c0c90835c8ed9fa694f5c" }
insta = { version = "1.46", features = ["yaml"] }
