[package]
name = "zed_ruby"
version = "0.16.5"
edition = "2021"
publish = false
license = "Apache-2.0"

[lib]
path = "src/ruby.rs"
crate-type = ["cdylib"]

[dependencies]
regex = "1.11.1"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
zed_extension_api = "0.7.0"

[dev-dependencies]
tree-sitter = "0.25"
tree-sitter-ruby = "0.23.1"
tree-sitter-embedded-template = "0.25.0"
insta = { version = "1.46", features = ["yaml"] }
